--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@twa-dev/types": "^7.8.0",
     "@types/node": "^20",
     "@types/react": "^18",
