--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.51.23",
     "@twa-dev/sdk": "^7.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
