--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@twa-dev/sdk": "^7.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@twa-dev/types": "^7.8.0",
+    "@types/cors": "^2.8.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
