--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.23",
+    "@tsparticles/react": "^3.0.0",
     "@twa-dev/sdk": "^7.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -23,7 +24,6 @@
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-confetti": "^6.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
