--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.23",
+    "@tsparticles/basic": "^3.5.0",
+    "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.5.0",
     "@twa-dev/sdk": "^7.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -28,6 +31,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.5.0",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
